# Lore-Engine-CI-CD

./: .bazelignore  .bazelrc  .dockerignore  .env.example  .env.merged  .env.public-api  .gitignore  BUILD.bazel  DEPLOYMENT_READY.md  Dockerfile  ENVIRONMENT.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSTALL_BAZEL.md  LAUNCH_README.md  LAUNCH_SUCCESS.md  LORE_DISPATCHER.md  MODULE.bazel  PRIVACY_POLICY.md  README.md  README_DEPLOYMENT.md  REFUND_POLICY.md  RELEASE_DEPLOYED.md  SECRETS_SETUP.md  SOLUTION.md  SYSTEM_SUMMARY.md  TERMS_OF_SERVICE.md  check-secrets.ps1  config.example.env  configure-secrets.bat  deploy-backend.ps1  docker-compose.yml  go.mod  go.sum  launch.ps1  launch.sh  ngrok-setup.md  release-notes.md  setup-deployment.ps1  setup-env.ps1  (+8 more)
.github/workflows/: deploy.yml  health-check.yml  line-endings-check.yml  line-endings-fix.yml
.husky/: pre-commit  pre-commit.ps1
bazel-bin/local-ai_/: local-ai.exe.runfiles_manifest
bazel-localai/: .bazelignore  .bazelrc  .env.production  .env.staging  BUILD.bazel  COMPLETE_SUMMARY.md  DEPLOYMENT_LIVE.md  Dockerfile  LAUNCH_ANNOUNCEMENTS.md  LAUNCH_COMPLETE.md  LORE_DISPATCHER_STATUS.md  LORE_VERSIONING_SYSTEM.md  MODULE.bazel  RESOLVED.md  SESSION_ENRICHMENT_SUMMARY.md  SUCCESS_SUMMARY.md  VALIDATION_CHECKLIST.md  check-secrets.ps1  config.env  configure-github-secrets.ps1  debug.sh  deploy-community-api.sh  go.mod  launch.bat  launch.sh  launch_new.ps1  load-env.bat  load-env.ps1  load-env.sh  setup-deployment.sh  test-staging.txt  test.ps1  test_conflict_system.go  test_markdown.md  test_session_enrichment.go  validate-deployment.sh  validate-github-secrets.sh  validate-manual.ps1
bazel-localai/bazel-out/: stable-status.txt  volatile-status.txt
bazel-localai/config/: config.yaml  models.yaml  phi2.yaml
bazel-localai/kubernetes/: SECRETS_SETUP.md  complete-github-secrets.md  create-staging-server.ps1  deploy.ps1  deploy.sh  deployment.yaml  encode-secrets.ps1  hpa.yaml  manual-secrets-setup.md  setup-staging-secrets.ps1  staging-secrets-setup.md
bazel-localai/pkg/oci/: BUILD.bazel  container_test.go
bazel-localai/scripts/: debug-pkg-errors.ps1
bazel-localai/test/: test_conflict_system.go  test_markdown_generator.go  test_session_enrichment.go
bazel-out/: volatile-status.txt
cmd/local-ai/: BUILD.bazel
docs/: implementation_summary.md  lore_conflict_detection.md  lore_markdown_generator.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/monitoring/: MONITORING_SETUP.md
kubernetes/: README.md  configmap.yaml  configure-secrets.ps1  deployment.yaml  github-secrets-reference.md  ingress.yaml  localAI  localAI.pub  staging-server-setup.md  staging-server-test-results.md
lore-localai-integration/: .env.example  DEPLOY_SUBDOMAIN.md  DEPLOY_TO_PHANTOMGEAR.md  DISCORD_INTEGRATION_SUMMARY.md  Dockerfile  Dockerfile.conflict-detection  Dockerfile.lore-dispatcher  Dockerfile.realtime  FIX_DNS.md  GHOST-TIER-SUCCESS-SUMMARY.md  GITHUB_NETLIFY_DEPLOY.md  LIVE_STRIPE_SETUP.md  NAMECHEAP_DNS_SETUP.md  NAMECHEAP_UPLOAD.md  PHASE-IV-SUCCESS-REPORT.md  README.md  SAAS-QUICKSTART.md  STRIPE-SETUP-GUIDE.md  STRIPE_DEPLOYMENT_REPORT.md  STRIPE_INTEGRATION_GUIDE.md  TIKTOK_DNS_VERIFICATION.md  TIKTOK_INTEGRATION_SUMMARY.md  TIKTOK_PRODUCTION_CONFIG.md  TIKTOK_QUICK_REFERENCE.txt  TIKTOK_SETUP.md  UPLOAD_CPANEL.md  UPLOAD_FTP.md  UPLOAD_GIT.md  VIRAL-FLOW-DIAGRAM.md  auto-remix-engine.go  check-environment.cjs  check-environment.js  check-phase-iv.js  check-services.js  check-stripe-key.js  complete-integration-test.go  complete-integration-test.js  conflict-api-server.js  create-products.js  creator-leaderboards.go  (+89 more)
lore-localai-integration/dashboard/: README.md  app.js  index.html  server.js  styles.css
lore-localai-integration/deploy/: env-update.txt
lore-localai-integration/localai-hosting/: Dockerfile
lore-localai-integration/monitoring/: prometheus.yml
lore-localai-integration/public/: cancel.html  dashboard.html  pricing.html  success.html
lore-localai-integration/scripts/: stripe-setup.js
lore-localai-integration/src/: index.ts  realtime-server.ts  saas-server.ts  server.ts  start.ts  (+1 more)
models/: phi-2.gguf
pkg/hooks/: BUILD.bazel  discord.go  haunted.go  interactive_lore_looper.go  live_metrics_collector.go  lore_conflict_detector.go  lore_dispatcher.go  lore_markdown_generator.go  markdown.go  tiktok.go
scripts/: build.ps1  diagnose.ps1  health-check.ps1  install-bazel.ps1  setup.ps1
test/: test_lore_dispatcher.go
(+161 files in other folders)
