module(
    name = "local-ai",
    version = "0.0.0",
)

# Core Bazel dependencies for Go
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

# Go dependencies extension
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Force inclusion of pkg/errors and other main dependencies
use_repo(
    go_deps,
    "com_github_gin_gonic_gin",
    "com_github_pkg_errors",
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
)
