load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "local-ai_lib",
    srcs = ["main.go"],
    importpath = "github.com/mudler/LocalAI/cmd/local-ai",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/hooks:hooks",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_binary(
    name = "local-ai",
    embed = [":local-ai_lib"],
    visibility = ["//visibility:public"],
    pure = "on",  # Force pure Go build
    static = "on",  # Static linking
)
